# vigils

./: CHANGELOG.md  CHANGELOG.zh-CN.md  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: release.yml
apps/desktop/: Cargo.toml  tauri.conf.json
apps/desktop/src/: commands.rs  embed.rs
apps/desktop/ui/src/i18n/: index.ts
apps/native-host/tests/: acceptance.rs
apps/vigil-hub-cli/: Cargo.toml
apps/vigil-hub-cli/src/: demo.rs  hook.rs  inspect.rs  lib.rs  main.rs  posture.rs  serve.rs  setup.rs  setup_hooks.rs  setup_mcp.rs  wrap.rs
apps/vigil-hub-cli/tests/: protection_event_types_sync.rs  serve_smoke.rs
crates/vigil-audit/: Cargo.toml
crates/vigil-audit/src/: approvals.rs  error.rs  hash.rs  ledger.rs  lib.rs  registry.rs  schema.sql
crates/vigil-audit/tests/: approvals_redaction.rs  drift_state_machine.rs  ledger_invariants.rs  protection_summary.rs
crates/vigil-browser/src/: audit.rs  classifier.rs  lib.rs  protocol.rs
crates/vigil-firewall/: Cargo.toml
crates/vigil-firewall/src/: extract.rs  lib.rs  scorer.rs
crates/vigil-http-transport/tests/: e2e_real_tls.rs
crates/vigil-lease/: Cargo.toml
crates/vigil-mcp/: Cargo.toml
crates/vigil-mcp/src/: hub.rs  oracle.rs  stdio.rs
crates/vigil-mcp/tests/: hub_acceptance.rs  hub_injection_classifier_smoke.rs  hub_monitor_mode.rs  tools_list_auto_approve.rs
crates/vigil-policy/: Cargo.toml
crates/vigil-policy/src/: engine.rs  lib.rs
crates/vigil-redaction/src/: injection.rs  lib.rs
crates/vigil-redaction/src/bootstrap/: manifest.rs  mod.rs  tests.rs  verify.rs
crates/vigil-redaction/tests/: injection_classifier_ort_smoke.rs
crates/vigil-runner-types/src/: env_policy.rs  lib.rs
crates/vigil-runner/tests/: audit_sink.rs  native_acceptance.rs
crates/vigil-sandbox-linux/src/: linux.rs
crates/vigil-sdk/: Cargo.toml  README.md
crates/vigil-sdk/src/: firewall_builder.rs  lib.rs
crates/vigil-types/src/: lease.rs
crates/vigil-types/tests/: invariants.rs
crates/vigil-ui-protocol/: Cargo.toml
docs/: ota-pipeline.md
docs/adr/: 0007-sandbox-runner.md  0019-audit-advisories-policy.md  0021-http-sse-mcp-upstream.md
docs/book/src/: SUMMARY.md  intro.md
docs/book/src/getting-started/: agent-integration.md  agent-integration.zh-CN.md  installation.md  verifying-downloads.md  verifying-downloads.zh-CN.md
docs/book/src/ops/: multi-platform-build.md
docs/user-guide/: agent-integration.md  getting-started.md
extensions/chrome-mv3/: README.md  background.js  content-script.js  manifest.json  popup.html
scripts/: gen-updater-manifest.mjs  verify-ota.mjs
scripts/ota/: vigils-ota-sync.service  vigils-ota-sync.sh  vigils-ota-sync.timer
scripts/test-local/: e2e-wrap-realserver.mjs  strict-mcp-server.mjs
