[package]
name = "vigil-hub-cli"
publish = false  # 非 SDK publish set(CLI app)— 不上 crates.io;cargo-deny path-dep wildcard 守门
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[lib]
name = "vigil_hub_cli"
path = "src/lib.rs"

[[bin]]
name = "vigil-hub"
path = "src/main.rs"

[dependencies]
vigil-mcp = { path = "../../crates/vigil-mcp" }

# I10b-β:add-remote-mcp 命令所需
vigil-audit = { path = "../../crates/vigil-audit" }
# β 代码 R1 BLOCKER 1 修复:默认启用 os-keychain 让 CLI secret 持久化。
# 平台 backend 不可用时 fail-closed 报错,**不**静默回退到内存
# (否则 metadata 有但 secret 丢,用户无感知 token 丢失)。
vigil-lease = { path = "../../crates/vigil-lease", features = ["os-keychain"] }
vigil-http-auth = { path = "../../crates/vigil-http-auth" }
vigil-http-transport = { path = "../../crates/vigil-http-transport" }
# v0.3 Stage 1:`vigil-hub serve --stdio` 需 Hub + Firewall + Policy + 类型
vigil-firewall = { path = "../../crates/vigil-firewall" }
vigil-policy = { path = "../../crates/vigil-policy" }
vigil-types = { path = "../../crates/vigil-types" }
# ISS-008 Phase 2 T5:ServeError::PrivacyFilterInit 透传 EngineError;feature 注入走
# vigil-firewall/ort,本依赖默认 0 features(--features ort 时由 vigil-firewall 透传打开)。
vigil-redaction = { path = "../../crates/vigil-redaction" }
clap = { workspace = true }
url = { workspace = true }
oauth2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
# `vigil-hub demo` 零设置首次体验:驱动真 Hub 需 args 规范化哈希(scope 预批准走真 Allow 路径)+
# 本地生成形似真实的 demo secret(getrandom)+ tamper 演示直接改账本一行(rusqlite,与 vigil-audit
# 同 bundled SQLite)。均 workspace 依赖,已随 vigil-audit/vigil-lease 链入二进制。
serde_jcs = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
getrandom = { workspace = true }
rusqlite = { workspace = true }
# `vigil-hub setup` 一键接入:跨平台定位用户 agent 配置目录(~/.claude 等)。
dirs = "6"
# `setup --mcp` 同时保护 Codex 的 `~/.codex/config.toml`(TOML `[mcp_servers.*]`)。用
# format-preserving 的 `DocumentMut` 做外科手术式改写(只动命中条目的 command+args),保留用户
# 配置里的注释/键序/其它设置段 —— 与 cargo 自身编辑 Cargo.toml 同款做法。版本对齐 lock 内既有
# 0.25.x(transitive),不引入新副本。
toml_edit = "0.25"
# `vigil-hub inspect` 命令行查审计账本:复用 desktop 的 dispatch/render(default-features=false,
# **不**拉 gui/tauri),+ runner(SandboxProfile)+ ui-protocol(Req 类型)。
vigil-desktop = { path = "../desktop", default-features = false }
vigil-runner = { path = "../../crates/vigil-runner" }
vigil-ui-protocol = { path = "../../crates/vigil-ui-protocol" }

[dev-dependencies]
# CLI 级集成测试用(β R1 MUST-FIX 4):InMemorySecretStore 注入 + mock AS
vigil-audit = { path = "../../crates/vigil-audit", features = ["test-util"] }
tempfile = { workspace = true }

[features]
# ISS-008 Phase 2 T5:透传到 vigil-firewall/ort → vigil-redaction/ort,
# 启用 OrtPiiScanner 注入。默认 feature 矩阵 0 ort 痕迹。
ort = ["vigil-firewall/ort"]
